Create final JRE image