@@ -95,7 +95,7 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.1.1</version>
 				<configuration>
-					<outputDirectory>${project.basedir}/release</outputDirectory>
+					<outputDirectory>${project.build.directory}/release</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -109,8 +109,84 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.basedir}/release/dependencies</outputDirectory>
+							<outputDirectory>${project.build.directory}/release</outputDirectory>
 							<includeScope>runtime</includeScope>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- perform some additional tasks (Maven does not support this yet) -->
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+
+					<!-- patch the module jar to feature a main class and a version number -->
+					<!-- see https://issues.apache.org/jira/browse/MJAR-238 -->
+					<execution>
+						<id>patch-module-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<exec executable="${java.home}/bin/jar" failonerror="true">
+
+									<!-- add the main class -->
+									<arg value="--main-class" />
+									<arg value="name.ulbricht.led.LEDApp" />
+
+									<!-- add the version number -->
+									<arg value="--module-version" />
+									<arg value="${project.version}" />
+
+									<!-- update only -->
+									<arg value="--update" />
+
+									<!-- file to update -->
+									<arg value="--file" />
+									<arg
+										value="${project.build.directory}/release/${project.artifactId}-${project.version}.jar" />
+								</exec>
+							</target>
+						</configuration>
+					</execution>
+
+					<!-- create runimage with a minimal JRE and all required modules and 
+						a launcher "bin/LED" in the "runimage" folder -->
+					<!-- see https://maven.apache.org/plugins/maven-jlink-plugin -->
+					<execution>
+						<id>create-jre</id>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<exec executable="${java.home}/bin/jlink"
+									failonerror="true">
+									<!-- path to modules -->
+									<arg value="-p" />
+									<arg value="${project.build.directory}/release" />
+
+									<!-- name(s) of root module(s) -->
+									<arg value="--add-modules" />
+									<arg value="name.ulbricht.led" />
+
+									<!-- target folder for the runimage -->
+									<arg value="--output" />
+									<arg value="${project.build.directory}/runimage" />
+
+									<!-- strip debug information -->
+									<arg value="--strip-debug" />
+
+									<!-- name of the launcher and module to launch -->
+									<arg value="--launcher" />
+									<arg value="LED=name.ulbricht.led" />
+								</exec>
+							</target>
 						</configuration>
 					</execution>
 				</executions>
